--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta name="dcterms.created" content="sáb, 29 abr 2023 00:32:19 GMT">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <title></title>
+    <title>Solidity on HTMLCoin Workshop</title>
     
     <!--[if IE]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
   <body>
+      a list of course materias/links for the course will appear here!
 
   </body>
 </html>
