--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <![endif]-->
   </head>
   <body>
-      a list of course materias/links for the course will appear here!
+      A list of course materials/links for the course will appear here!
 
   </body>
 </html>
